--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>hola</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quae, quidem distinctio dicta placeat, ratione exercitationem laudantium nulla tenetur tempore veniam corporis nihil fuga, laboriosam perspiciatis quas aliquid aut vero?
-        
     </p>
+    <h2>Lorem ipsum dolor sit.</h2>
 </body>
 </html>
