con github page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GitHub Page</title>
 </head>
 <body>
-    <h1>hola</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quae, quidem distinctio dicta placeat, ratione exercitationem laudantium nulla tenetur tempore veniam corporis nihil fuga, laboriosam perspiciatis quas aliquid aut vero?
-    </p>
-    <h2>Lorem ipsum dolor sit.</h2>
+    <h1>usando github page</h1>
 </body>
 </html>
